--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,20 @@
-// Place all the styles related to the Pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+th, td {
+  padding: 15px;
+}
+
+td {
+  text-align: center;
+}
+
+tr#indicator-container {
+  background-color: #eee;
+  padding: 10px;
+}
+
+table#beers tr:nth-child(even) {
+  background-color: #eee;
+}
+
+table#beers tr:nth-child(odd) {
+  background-color: #fff;
+}
