Add animation components

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,6 +3,9 @@
 <div ng-app="app">
   <div ng-controller="beerCtrl" ng-init="setup()">
   <p>Search: </p><input ng-model="nameFilter">
+  <datalist>
+    <option ng-repeat="beer in beers">{{ beer.name }}</option>
+  </datalist>
     <div>
       <button ng-click="changeOrderAttribute('name')">Order by name</button>
       <button ng-click="changeOrderAttribute('style')">Order by style</button>
